# econ-project-templates

./: .azure-pipelines.yaml  .azure-pipeplines.yaml  .codespell-ignore-words  .environment.linux.yml  .environment.osx.yml  .environment.windows.yml  .environment.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .readthedocs_template.yml  .travis.yml  .yamllint.yml  AGENTS.md  CHANGES.md  CHANGES.rst  CHANGES_template.md  CITATION  CLAUDE.md  CONTRIBUTING.rst  GEMINI.md  LICENSE  MANIFEST.in  README-upper.md  README.md  README.rst  anaconda-project.yml  codecov.yml  conda_versions.txt  cookiecutter.json  cursor_latex_to_myst_slidev_conversion.md  environment.yml  faq.html  genindex.html  getting_started.html  how-to-release.md  implementation.html  index.html  (+27 more)
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  CITATION  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  WAF.rst  clean.py  environment.yml  format_python_files.py  prepare_data_for_project.py  pyproject.toml  pytask.ini  setup.cfg  setup.py  tox.ini  waf.py  wscript
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
{{cookiecutter.project_slug}}/.github/workflows/: main.yml
{{cookiecutter.project_slug}}/.mywaflib/waflib/: Build.py  ConfigSet.py  Configure.py  Context.py  Errors.py  Logs.py  Node.py  Options.py  Runner.py  Scripting.py  Task.py  TaskGen.py  Utils.py  ansiterm.py  fixpy2.py  processor.py
{{cookiecutter.project_slug}}/docs/: conf.py  final.rst  index.rst  introduction.rst  library.rst  model_specs.rst  original_data.rst  paper.rst  task_documentation.py
{{cookiecutter.project_slug}}/inst/: WORDLIST
{{cookiecutter.project_slug}}/paper/: refs.bib  research_paper.tex  research_pres_30min.tex  task_paper.py  {{cookiecutter.project_slug}}.tex  {{cookiecutter.project_slug}}_pres.tex
{{cookiecutter.project_slug}}/sandbox/: few_agents.ipynb
{{cookiecutter.project_slug}}/src/: fit_model.R  task_analysis.r  task_data_management.R
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  config.py  data_management.py  task_analysis.py  task_data_management.py  task_data_management_r.py  task_final.py  utilities.py
{{cookiecutter.project_slug}}/src_julia/: wscript
{{cookiecutter.project_slug}}/src_julia/analysis/: schelling.py  wscript
{{cookiecutter.project_slug}}/src_julia/data_management/: get_simulation_draws.jl  wscript
{{cookiecutter.project_slug}}/src_julia/documentation/: analysis.rst  conf.py  index.rst  model_specs.rst
{{cookiecutter.project_slug}}/src_julia/final/: plot_locations.py  project_dependency_graph.py  wscript
{{cookiecutter.project_slug}}/src_julia/model_code/: agent.py
{{cookiecutter.project_slug}}/src_julia/original_data/: dummy.txt
{{cookiecutter.project_slug}}/src_julia/paper/: research_paper.tex  research_pres_30min.tex
{{cookiecutter.project_slug}}/src_matlab/: config.py  wscript
{{cookiecutter.project_slug}}/src_matlab/analysis/: schelling.m  wscript
{{cookiecutter.project_slug}}/src_matlab/data_management/: get_simulation_draws.m  wscript
{{cookiecutter.project_slug}}/src_matlab/documentation/: analysis.rst  conf.py  data_management.rst  final.rst  index.rst  introduction.rst  library.rst  model_code.rst  model_specs.rst  original_data.rst  paper.rst  references.rst  wscript
{{cookiecutter.project_slug}}/src_matlab/final/: plot_locations.m  project_dependency_graph.py  wscript
{{cookiecutter.project_slug}}/src_matlab/manual_input/: some_table.tex  wscript
{{cookiecutter.project_slug}}/src_matlab/model_code/: move_until_happy.m
{{cookiecutter.project_slug}}/src_matlab/paper/: research_paper.tex  research_pres_30min.tex  task_paper.py  wscript
{{cookiecutter.project_slug}}/src_python/: config.py  wscript
{{cookiecutter.project_slug}}/src_python/analysis/: schelling.py  task_schelling.py  wscript
{{cookiecutter.project_slug}}/src_python/data_management/: get_simulation_draws.py  task_get_simulation_draws.py
{{cookiecutter.project_slug}}/src_python/documentation/: analysis.rst  conf.py  data_management.rst  final.rst  introduction.rst  model_specs.rst  original_data.rst  task_documentation.py  wscript
{{cookiecutter.project_slug}}/src_python/exploration/: few_agents.ipynb
{{cookiecutter.project_slug}}/src_python/figures/: auxiliaries.py  matplotlibrc  plot_locations.py  wscript
{{cookiecutter.project_slug}}/src_python/final/: plot_locations.py  task_plot_locations.py  wscript
{{cookiecutter.project_slug}}/src_python/model_code/: agent.py
{{cookiecutter.project_slug}}/src_python/original_data/: dummy.txt
{{cookiecutter.project_slug}}/src_python/paper/: research_paper.tex  research_pres_30min.tex  task_paper.py  wscript
{{cookiecutter.project_slug}}/src_python/sandbox/: few_agents.ipynb
{{cookiecutter.project_slug}}/src_r/: config.py  wscript
{{cookiecutter.project_slug}}/src_r/analysis/: first_stage_estimation.r  regression_on_indicators.r  second_stage_estimation.r  task_analysis.py  wscript
{{cookiecutter.project_slug}}/src_r/data_management/: add_variables.r  task_data_management.py  wscript
{{cookiecutter.project_slug}}/src_r/documentation/: analysis.rst  conf.py  dependency_graph.tex  final.rst  introduction.rst  library.rst  model_code.rst  original_data.rst  task_documentation.py  wscript
{{cookiecutter.project_slug}}/src_r/final/: figure1_mortality.r  figure_mortality.r  project_dependency_graph.py  table1_reg_on_indicators.r  table2_first_stage_est.r  table3_second_stage_est.r  table_first_stage_est.r  table_second_stage_est.r  wscript
{{cookiecutter.project_slug}}/src_r/model_code/: functions.r
{{cookiecutter.project_slug}}/src_r/model_specs/: addindic.json  newdata.json  rmconj.json  rmconj_addindic.json
{{cookiecutter.project_slug}}/src_r/paper/: refs.bib  research_paper.tex  research_pres_30min.tex  task_paper.py
{{cookiecutter.project_slug}}/src_stata/: wscript
{{cookiecutter.project_slug}}/tests/: __init__.py
(+1261 files in other folders)
