[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "template-project"
description = "Template for reproducible research projects in economics"
readme.content-type = "text/markdown"
readme.file = "README.md"
keywords = [
  "Economics",
  "Reproducible Research",
]
license.text = "MIT"
maintainers = [
  { name = "JANE DOE", email = "janedoe@example-university.com" },
]
authors = [
  { name = "JANE DOE", email = "janedoe@example-university.com" },
]
requires-python = ">=3.14,<3.15"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
urls.Changelog = "https://github.com/OpenSourceEconomics/econ-project-templates"
urls.Documentation = "https://github.com/OpenSourceEconomics/econ-project-templates"
urls.Github = "https://github.com/OpenSourceEconomics/econ-project-templates"
urls.Tracker = "https://github.com/OpenSourceEconomics/econ-project-templates/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/template_project/_version.py"
build.targets.sdist.exclude = [ "tests" ]
build.targets.sdist.only-packages = true
build.targets.wheel.only-include = [ "src" ]
build.targets.wheel.sources = [ "src" ]
metadata.allow-direct-references = true
version.source = "vcs"

[tool.ruff]
target-version = "py314"
fix = true
lint.select = [ "ALL" ]
lint.extend-ignore = [
  "ANN",     # Missing type annotations
  "COM812",  # Conflict with ruff-format
  "D10",     # Missing docstrings
  "ISC001",  # Conflict with ruff-format
  "PLR0913", # Too many arguments in function definition
  "RET504",  # Don't force to calculate upon return
  "S101",    # Use of `assert` detected.
  "S301",    # pickle module is unsafe
  "TC001",   # Move application import into a type-checking block
  "TC002",   # Move third-party import into a type-checking block
  "TC003",   # Move standard library import into a type-checking block
]
lint.per-file-ignores."task_*.py" = [ "ANN", "ARG001", "S603" ]
lint.per-file-ignores."tests/*" = [ "D", "PD011" ]
lint.pydocstyle.convention = "google"

[tool.codespell]
ignore-words = ".codespell-ignore-words"
skip = "package-lock.json,node_modules,pixi.lock,.codespell-ignore-words"

[tool.pytest]
ini_options.addopts = "--pdbcls=pdbp:Pdb"
ini_options.filterwarnings = []
ini_options.markers = [
  "wip: Tests that are work-in-progress.",
  "unit: Flag for unit tests which target mainly a single function.",
  "integration: Flag for integration tests which may comprise of multiple unit tests.",
  "end_to_end: Flag for tests that cover the whole program.",
]
ini_options.norecursedirs = [ "docs" ]

[tool.ty]
environment.root = [ "." ]
rules.ambiguous-protocol-member = "error"
rules.deprecated = "error"
rules.division-by-zero = "error"
rules.ignore-comment-unknown-rule = "error"
rules.invalid-argument-type = "error"
rules.invalid-ignore-comment = "error"
rules.invalid-return-type = "error"
rules.possibly-missing-attribute = "error"
rules.possibly-missing-implicit-call = "error"
rules.possibly-missing-import = "error"
rules.possibly-unresolved-reference = "error"
rules.redundant-cast = "error"
rules.undefined-reveal = "error"
rules.unresolved-global = "error"
rules.unsupported-base = "error"
rules.unused-ignore-comment = "error"
rules.useless-overload-body = "error"
src.include = [ "src/", "tests/" ]

[tool.yamlfix]
line_length = 88
none_representation = "null"
preserve_quotes = true

[tool.pytask]
ini_options.paths = [ "./src/template_project", "./documents" ]
ini_options.pdbcls = "pdbp:Pdb"

[tool.pixi]
dependencies.jupyter-book = ">=2.0"
dependencies.jupyterlab = "*"
dependencies.nodejs = "*"
dependencies.numpy = ">=2.4"
dependencies.pandas = ">=2.2"
dependencies.plotly = ">=6.5"
dependencies.pyarrow = "*"
dependencies.prek = "*"
dependencies.pygraphviz = "*"
dependencies.pytask = "*"
dependencies.pytask-parallel = "*"
dependencies.pytest = "*"
dependencies.pytest-cov = "*"
dependencies.pytest-xdist = "*"
dependencies.python-kaleido = ">=1.1"
dependencies.statsmodels = "*"
dependencies.ty = "*"
environments.docs = { features = [ "docs" ], solve-group = "default" }
feature.docs.dependencies.jupyter-book = ">=2.0"
feature.docs.dependencies.mystmd = "*"
feature.docs.tasks.docs = { cmd = "jupyter book build --html", cwd = "docs_template/source" }
feature.docs.tasks.view-docs = { cmd = "jupyter book start", cwd = "docs_template/source" }
feature.docs.tasks.check-urls = { cmd = "jupyter book build --html --check-links --strict", cwd = "docs_template/source" }
feature.docs.tasks.recreate-dag = { cmd = "pixi run pytask dag --rank-direction TB --output-path docs_template/source/figures/dag.svg" }
pypi-dependencies.template_project = { path = ".", editable = true }
pypi-dependencies.pdbp = "*"
pypi-dependencies.tabulate = "*"
tasks.tests = { cmd = "pytest", description = "Run tests" }
tasks.tests-with-cov = { cmd = "pytest --cov-report=xml --cov=./", description = "Run tests with coverage" }
tasks.ty = { cmd = "ty check", description = "Check typing" }
tasks.view-paper = { cmd = "jupyter book start", description = "View the HTML paper in browser" }
tasks.view-pres = { cmd = "npx slidev documents/presentation.md", description = "View the presentation in browser" }
workspace.channels = [ "conda-forge" ]
workspace.platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]
