[metadata]
name = example_project
description = Example project
long_description = file: README-upper.md
long_description_content_type = text/markdown
url = https://github.com/OpenSourceEconomics/econ-project-templates
author = Hans-Martin von Gaudecker
author_email = hmgaudecker@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/OpenSourceEconomics/econ-project-templates
    Documentation = https://github.com/OpenSourceEconomics/econ-project-templates
    Github = https://github.com/OpenSourceEconomics/econ-project-templates
    Tracker = https://github.com/OpenSourceEconomics/econ-project-templates/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/example_project/_version.py
