[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]

[tool.setuptools_scm]
write_to = "src/{{ cookiecutter.project_slug }}/_version.py"

[tool.pytask.ini_options]
paths = ["./src/{{ cookiecutter.project_slug }}", "./src/paper"]
infer_latex_dependencies = true

[tool.ruff]
target-version = "py311"
select = ["ALL"]
fix = true
extend-ignore = [
    # Numpy docstyle
    "D107",
    "D203",
    "D212",
    "D213",
    "D402",
    "D413",
    "D415",
    "D416",
    "D417",
    # Others.
    "D404",     # Do not start module docstring with "This".
    "RET504",   # unnecessary variable assignment before return.
    "S101",     # raise errors for asserts.
    "I",        # ignore isort
    "ANN101",   # type annotating self
    "ANN102",   # type annotating cls
    "FBT",      # flake8-boolean-trap
    "EM",       # flake8-errmsg
    "ANN401",   # flake8-annotate typing.Any
    "PD",       # pandas-vet
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "ANN"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.yamlfix]
line_length = 88
flow_style_sequence = false
none_representation = "null"
