[metadata]
name = {{ cookiecutter.project_slug }}
description = {{ cookiecutter.project_name }}
long_description = file: README.md
long_description_content_type = text/markdown{% if cookiecutter.git_remote_url != '' %}
url = {{ cookiecutter.git_remote_url }}{% endif %}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
license = {{ cookiecutter.open_source_license }}
{% if cookiecutter.open_source_license != 'Not open source' %}license_file = LICENSE
{% endif %}platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: {{ cookiecutter.open_source_license }} License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only{% if cookiecutter.git_remote_url != '' %}
project_urls =
    Changelog = {{ cookiecutter.git_remote_url }}
    Documentation = {{ cookiecutter.git_remote_url }}
    Github = {{ cookiecutter.git_remote_url }}
    Tracker = {{ cookiecutter.git_remote_url }}/issues
{% endif %}

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/{{ cookiecutter.project_slug }}/_version.py
